--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -12,6 +12,8 @@
         android:layout_height="wrap_content"
         android:text="14.7"
         android:textAppearance="@style/TextAppearance.AppCompat.Display4"
+        android:textColor="@android:color/holo_red_dark"
+        android:typeface="monospace"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
