--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -25,24 +25,24 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="56dp"
+        android:layout_marginStart="56dp"
         android:layout_marginTop="16dp"
         android:text="Disconnected"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginStart="56dp" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/connect_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="7dp"
         android:layout_marginRight="7dp"
         android:layout_marginTop="8dp"
         android:onClick="connectUSB"
         android:text="Connect"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginEnd="7dp" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/button"
@@ -50,38 +50,22 @@
         android:layout_height="wrap_content"
         android:layout_marginRight="7dp"
         android:layout_marginTop="8dp"
-        android:onClick="startLogging"
         android:text="Start Logging"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/connect_button"
-        android:layout_marginEnd="7dp" />
+        app:layout_constraintTop_toBottomOf="@+id/connect_button" />
 
-    <LinearLayout
-        android:layout_width="368dp"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="0dp" />
-
-    <ScrollView
-        android:layout_width="344dp"
-        android:layout_height="186dp"
+    <ListView
+        android:id="@+id/device_list"
+        android:layout_width="320dp"
+        android:layout_height="142dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="35dp"
+        android:layout_marginTop="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/afr_dashboard"
-        app:layout_constraintVertical_bias="0.0">
-
-        <TextView
-            android:id="@+id/isplog_textview"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-    </ScrollView>
+        app:layout_constraintVertical_bias="0.506"></ListView>
 
 </android.support.constraint.ConstraintLayout>
