--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -4,9 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.tarcuri.til.Dashboard">
+    tools:context="com.tarcuri.til.Dashboard"><![CDATA[
 
-    <ImageView
         android:id="@+id/imageView2"
         android:layout_width="314dp"
         android:layout_height="273dp"
@@ -14,74 +13,59 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/innovate_guage_face"
-        tools:layout_editor_absoluteX="35dp" />
+        app:srcCompat="@drawable/innovate_guage_face" />
 
-    <TextView
-        android:id="@+id/afr_dashboard"
-        android:layout_width="wrap_content"
-        android:layout_height="56dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginTop="8dp"
-        android:text="14.7"
-        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
-        android:textColor="@android:color/holo_red_dark"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
-        app:layout_constraintEnd_toEndOf="@+id/imageView2"
-        app:layout_constraintStart_toStartOf="@+id/imageView2"
-        app:layout_constraintTop_toTopOf="@+id/imageView2"
-        tools:layout_editor_absoluteX="159dp" />
+    ]]>
 
     <ListView
         android:id="@+id/device_list"
         android:layout_width="318dp"
         android:layout_height="121dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginBottom="232dp"
+        app:layout_constraintBottom_toTopOf="@+id/view_log_button"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2"
-        tools:layout_editor_absoluteX="33dp"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/progress_bar_title"
-        app:layout_constraintVertical_bias="0.0"></ListView>
+        app:layout_constraintStart_toStartOf="parent"></ListView>
 
     <Button
         android:id="@+id/refresh_device_button"
-        android:layout_width="88dp"
-        android:layout_height="48dp"
+        android:layout_width="87dp"
+        android:layout_height="47dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="56dp"
+        android:layout_marginTop="8dp"
         android:onClick="refreshDeviceList"
         android:text="Refresh"
-        android:textSize="8sp"
-        android:layout_marginLeft="35dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/progress_bar_title"
-        android:layout_marginTop="-11dp" />
-
-    <ProgressBar
-        android:id="@+id/progress_bar"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:visibility="invisible"
-        android:layout_marginRight="35dp"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/progress_bar_title"
-        android:layout_marginTop="0dp" />
+        android:textSize="12sp"
+        app:layout_constraintBottom_toTopOf="@+id/device_list"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/progress_bar_title"
-        android:layout_width="163dp"
-        android:layout_height="48dp"
-        android:layout_marginBottom="35dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:fontFamily="monospace"
-        android:textSize="12sp"
+        android:id="@+id/textView"
+        android:layout_width="183dp"
+        android:layout_height="43dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:text="Select Device"
+        android:textAlignment="center"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:textSize="24sp"
+        app:layout_constraintBaseline_toBaselineOf="@+id/refresh_device_button"
+        app:layout_constraintEnd_toStartOf="@+id/refresh_device_button"
+        app:layout_constraintHorizontal_bias="0.595"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/view_log_button"
+        android:layout_width="215dp"
+        android:layout_height="53dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:text="View / Share Logs"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintLeft_toRightOf="@+id/refresh_device_button"
-        app:layout_constraintRight_toLeftOf="@+id/progress_bar"
-        tools:layout_editor_absoluteX="130dp"
-        tools:layout_editor_absoluteY="428dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 
 </android.support.constraint.ConstraintLayout>
