added toggles to Log activity

--- a/app/src/main/res/layout/activity_log.xml
+++ b/app/src/main/res/layout/activity_log.xml
@@ -9,15 +9,13 @@
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="313dp"
-        android:layout_height="289dp"
+        android:layout_height="240dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
         app:layout_constraintBottom_toTopOf="@+id/log_view"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/innovate_guage_face" />
 
     <EditText
@@ -55,4 +53,34 @@
             android:layout_height="wrap_content"
             android:orientation="vertical" />
     </ScrollView>
+
+    <ToggleButton
+        android:id="@+id/connect_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginTop="8dp"
+        android:checked="false"
+        android:text="Connect"
+        android:textOff="Disconnected"
+        android:textOn="Connected"
+        app:layout_constraintBottom_toTopOf="@+id/imageView"
+        app:layout_constraintEnd_toEndOf="@+id/imageView"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.32" />
+
+    <ToggleButton
+        android:id="@+id/log_button"
+        android:layout_width="119dp"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="64dp"
+        android:layout_marginEnd="64dp"
+        android:text="REC"
+        android:textOff="Record"
+        android:textOn="Recording"
+        app:layout_constraintBaseline_toBaselineOf="@+id/connect_button"
+        app:layout_constraintEnd_toStartOf="@+id/connect_button"
+        app:layout_constraintStart_toStartOf="@+id/imageView" />
 </android.support.constraint.ConstraintLayout>
