--- a/app/src/main/res/layout/activity_log.xml
+++ b/app/src/main/res/layout/activity_log.xml
@@ -18,7 +18,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@drawable/innovate_guage_face" />
 
-    <EditText
+    <TextView
         android:id="@+id/lamba_text"
         android:layout_width="72dp"
         android:layout_height="60dp"
@@ -59,8 +59,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
-        android:layout_marginRight="8dp"
         android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
         android:layout_marginTop="8dp"
         android:checked="false"
         android:text="Connect"
@@ -75,8 +75,8 @@
         android:id="@+id/log_button"
         android:layout_width="119dp"
         android:layout_height="wrap_content"
-        android:layout_marginRight="64dp"
         android:layout_marginEnd="64dp"
+        android:layout_marginRight="64dp"
         android:text="REC"
         android:textOff="Record"
         android:textOn="Recording"
