--- a/app/src/main/res/layout/activity_log.xml
+++ b/app/src/main/res/layout/activity_log.xml
@@ -21,7 +21,7 @@
     <TextView
         android:id="@+id/lamba_text"
         android:layout_width="72dp"
-        android:layout_height="60dp"
+        android:layout_height="40dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
@@ -31,6 +31,7 @@
         android:text="14.7"
         android:textAlignment="center"
         android:textColor="@android:color/holo_red_dark"
+        android:textSize="24sp"
         android:typeface="monospace"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="@+id/imageView"
