--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -21,8 +21,8 @@
         android:id="@+id/device_list"
         android:layout_width="318dp"
         android:layout_height="121dp"
-        android:layout_marginBottom="232dp"
-        app:layout_constraintBottom_toTopOf="@+id/view_log_button"
+        android:layout_marginBottom="204dp"
+        app:layout_constraintBottom_toTopOf="@+id/start_log_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"></ListView>
 
@@ -57,13 +57,28 @@
 
     <Button
         android:id="@+id/view_log_button"
-        android:layout_width="215dp"
-        android:layout_height="53dp"
+        android:layout_width="225dp"
+        android:layout_height="50dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:text="View / Share Logs"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/start_log_button"
+        android:layout_width="225dp"
+        android:layout_height="50dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:elevation="0dp"
+        android:onClick="startLogger"
+        android:text="Start Logging"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toTopOf="@+id/view_log_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
