--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -4,83 +4,68 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.tarcuri.til.Dashboard"><![CDATA[
-
-        android:id="@+id/imageView2"
-        android:layout_width="314dp"
-        android:layout_height="273dp"
-        android:layout_marginTop="16dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/innovate_guage_face" />
-
-    ]]>
-
-    <ListView
-        android:id="@+id/device_list"
-        android:layout_width="318dp"
-        android:layout_height="121dp"
-        android:layout_marginBottom="204dp"
-        app:layout_constraintBottom_toTopOf="@+id/start_log_button"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"></ListView>
-
-    <Button
-        android:id="@+id/refresh_device_button"
-        android:layout_width="87dp"
-        android:layout_height="47dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="56dp"
-        android:layout_marginTop="8dp"
-        android:onClick="refreshDeviceList"
-        android:text="Refresh"
-        android:textSize="12sp"
-        app:layout_constraintBottom_toTopOf="@+id/device_list"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    tools:context="com.tarcuri.til.Dashboard">
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="183dp"
         android:layout_height="43dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
+        android:layout_marginRight="8dp"
         android:text="Select Device"
         android:textAlignment="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:textSize="24sp"
         app:layout_constraintBaseline_toBaselineOf="@+id/refresh_device_button"
-        app:layout_constraintEnd_toStartOf="@+id/refresh_device_button"
-        app:layout_constraintHorizontal_bias="0.595"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintEnd_toStartOf="@+id/refresh_device_button" />
 
     <Button
-        android:id="@+id/view_log_button"
-        android:layout_width="225dp"
-        android:layout_height="50dp"
-        android:layout_marginBottom="8dp"
+        android:id="@+id/refresh_device_button"
+        android:layout_width="87dp"
+        android:layout_height="47dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:text="View / Share Logs"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
+        android:onClick="refreshDeviceList"
+        android:text="Refresh"
+        android:textSize="12sp"
+        app:layout_constraintEnd_toEndOf="@+id/device_list"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ListView
+        android:id="@+id/device_list"
+        android:layout_width="318dp"
+        android:layout_height="57dp"
+        android:layout_marginTop="16dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHorizontal_bias="0.494"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/refresh_device_button" />
 
     <Button
         android:id="@+id/start_log_button"
         android:layout_width="225dp"
         android:layout_height="50dp"
-        android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:elevation="0dp"
         android:onClick="startLogger"
         android:text="Start Logging"
         android:visibility="invisible"
-        app:layout_constraintBottom_toTopOf="@+id/view_log_button"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/device_list" />
 
-
+    <Button
+        android:id="@+id/view_log_button"
+        android:layout_width="225dp"
+        android:layout_height="50dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:text="View / Share Logs"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/start_log_button" />
 </android.support.constraint.ConstraintLayout>
