--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -43,7 +43,7 @@
         android:ems="10"
         android:inputType="none"
         android:text="14.7"
-        android:textAlignment="center"
+        android:textAlignment="textEnd"
         android:textColor="@android:color/holo_red_dark"
         android:textSize="36sp"
         android:typeface="monospace"
