--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -3,7 +3,13 @@
     <EditTextPreference
         android:key="pref_multiplier"
         android:title="Lambda Multiplier"
-        android:summary="AFR = (LAMBDA + OFFSET) * MULTIPLIER / 10000"
+        android:summary="@string/lambda_multiplier_desc"
         android:defaultValue="147"
+        />
+    <EditTextPreference
+        android:key="pref_format"
+        android:title="Log Format"
+        android:summary="T=time, A=afr, L=lamda, M=multiplier"
+        android:defaultValue="T,A,L,M"
         />
 </PreferenceScreen>
