--- a/app/src/main/res/layout/activity_til.xml
+++ b/app/src/main/res/layout/activity_til.xml
@@ -27,14 +27,15 @@
         android:layout_width="225dp"
         android:layout_height="50dp"
         android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:onClick="startLogManager"
         android:text="View / Share Logs"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintRight_toRightOf="@+id/connect_lc1_button"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/connect_lc1_button"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="@+id/connect_lc1_button" />
+        app:layout_constraintTop_toBottomOf="@+id/connect_lc1_button" />
 
     <Button
         android:id="@+id/refresh_device_button"
