--- a/app/src/main/res/layout/activity_view_log.xml
+++ b/app/src/main/res/layout/activity_view_log.xml
@@ -6,4 +6,33 @@
     android:layout_height="match_parent"
     tools:context="com.tarcuri.til.ViewLog">
 
+    <TableLayout
+        android:id="@+id/log_tablelayout"
+        android:layout_width="378dp"
+        android:layout_height="526dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    </TableLayout>
 </android.support.constraint.ConstraintLayout>
